small changes media querys

--- a/Apple_store/partials/_boxgallery.scss
+++ b/Apple_store/partials/_boxgallery.scss
@@ -218,6 +218,7 @@
       }
     }
   }
+
 }
 
 // Mac gallery info boxes image and text
@@ -243,6 +244,7 @@
     align-items: center;
     justify-content: flex-start;
     margin-bottom: 3rem;
+    margin-left: 1rem;
 
     .big_text_x {
       margin-top: 0;
@@ -280,6 +282,7 @@
     align-items: center;
     justify-content: flex-start;
     margin-bottom: 3rem;
+    margin-right: 1rem;
 
     .big_text_x {
       margin-top: 0;
@@ -329,6 +332,7 @@
     align-items: center;
     justify-content: flex-start;
     margin-bottom: 2rem;
+    margin-left: 1rem;
 
     .big_text_x {
       margin-top: 0;
@@ -366,6 +370,7 @@
     align-items: center;
     justify-content: flex-start;
     margin-bottom: 2rem;
+    margin-right: 1rem;
 
     .big_text_x {
       margin-top: 0;
