--- a/Apple_store/partials/_text-image.scss
+++ b/Apple_store/partials/_text-image.scss
@@ -134,6 +134,54 @@
     }
   }
 }
+
+// Information boxes iPad page
+.ipad_info-box {
+  display: flex;
+  justify-content: center;
+  column-gap:30px;
+  background:#f5f5f7;
+
+  .ipad-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 1rem;
+    width: 250px;
+    padding:10rem 0;
+
+    .fa-box-open,
+    .fa-record-vinyl,
+    .fa-comments {
+      font-size: 5em;
+      margin-bottom: 2rem;
+    }
+
+    h4 {
+      font-size: 2.5rem;
+      font-weight: 400;
+      margin-bottom: 0.5rem;
+      // padding: 0 1rem;
+    }
+
+    p {
+      font-size: 2rem;
+      font-weight: 300;
+      margin-bottom: 1rem;
+      // padding: 0 5rem;
+    }
+
+    .link-info {
+      list-style: none;
+      font-size: 2rem;
+      font-weight: 300;
+      margin-bottom: 1rem;
+      padding: 0 5rem;
+
+    }
+  }
+}
+
 // Big text stylings
 .big_text {
   font-size: 3.5rem;
@@ -143,6 +191,11 @@
 
 .big_text_xl {
   font-size: 6rem;
+  font-weight: 500;
+  padding: 8rem 0 5rem;
+}
+.big_text_xl_ipad {
+  font-size: 5.5rem;
   font-weight: 500;
   padding: 8rem 0 5rem;
 }
@@ -203,6 +256,13 @@
   padding: 1.5rem;
 }
 
+.price_buy_white{
+  color: white;
+  font-size: 2rem;
+  font-weight: 300;
+  padding: 1.5rem;
+}
+
 // paragraf text styles
 
 .text_light {
@@ -239,6 +299,7 @@
   margin-bottom: 2rem;
   padding: 0 5rem;
 }
+
 
 .text_dark_y {
   color: black;
