--- a/Apple_store/partials/_footer.scss
+++ b/Apple_store/partials/_footer.scss
@@ -1,7 +1,7 @@
 // Footer 
 footer {
     padding: 0;
-    margin-top: 3rem;
+    margin-top: 0;
     background: #f5f5f7;
     font-size: 1.3rem;
     .footer-content{
