--- a/Apple_store/styles/style.css
+++ b/Apple_store/styles/style.css
@@ -1,5 +1,4 @@
 .header {
-  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -70,7 +69,7 @@
 
 footer {
   padding: 0;
-  margin-top: 3rem;
+  margin-top: 0;
   background: #f5f5f7;
   font-size: 1.3rem;
 }
