Mob-programmerat, Stylar sidor med universellt

--- a/Apple_store/partials/_headings.scss
+++ b/Apple_store/partials/_headings.scss
@@ -436,6 +436,7 @@
 // Contact home img
 .big-box {
   padding-top: 50px;
+  background-color: #ffffff;
   .fancy-rainbow{
     margin: 0 auto;
     width: fit-content;
