--- a/Apple_store/partials/_table.scss
+++ b/Apple_store/partials/_table.scss
@@ -1,6 +1,11 @@
+
 .table{
+    max-width: 1440px;
+    margin: 3rem auto;
     padding-top: 70px;
+    padding-bottom: 70px ;
     background-color: #ffffff;
+
     ul{
         display: flex;
         width: fit-content;
@@ -19,6 +24,7 @@
         }
     }
 }
+
 .mac-wrapper{
     background-color: #fafafa;
 }
@@ -168,6 +174,9 @@
     background-color: white;
 }
 .ipad-table{
+    
+    background: #ffffff;
+    
     .col{
         .thead{
             h2{
