--- a/Apple_store/partials/_text-image.scss
+++ b/Apple_store/partials/_text-image.scss
@@ -91,17 +91,19 @@
 
 // Information boxes mac page
 .mac_info-box {
+  max-width: 1440px;
+  margin: 3rem auto;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
-  margin: 3rem;
+  
 
   .mac-info {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 5rem;
+    padding: 5rem 0;
 
     .fa-box-open,
     .fa-record-vinyl,
@@ -141,6 +143,9 @@
     }
     
   }
+}
+.grey_info_background{
+  background-color: #f5f5f7;
 }
 
 // Information boxes iPad page
