--- a/Apple_store/partials/_text-image.scss
+++ b/Apple_store/partials/_text-image.scss
@@ -4,7 +4,7 @@
   align-items: center;
   flex-wrap: wrap;
   gap: 2rem;
-  margin-top: 5rem;
+  // margin-top: 5rem;
 
   .img-container {
     flex: 1 1 42rem;
@@ -154,6 +154,7 @@
   justify-content: center;
   column-gap:30px;
   background:#f5f5f7;
+  
 
   .ipad-info {
     display: flex;
@@ -162,6 +163,54 @@
     padding: 1rem;
     width: 250px;
     padding:10rem 0;
+
+    .fa-box-open,
+    .fa-record-vinyl,
+    .fa-comments {
+      font-size: 5em;
+      margin-bottom: 2rem;
+    }
+
+    h4 {
+      font-size: 2.5rem;
+      font-weight: 400;
+      margin-bottom: 0.5rem;
+      // padding: 0 1rem;
+    }
+
+    p {
+      font-size: 2rem;
+      font-weight: 300;
+      margin-bottom: 1rem;
+      // padding: 0 5rem;
+    }
+
+    .link-info {
+      list-style: none;
+      font-size: 2rem;
+      font-weight: 300;
+      margin-bottom: 1rem;
+      padding: 0 5rem;
+
+    }
+  }
+}
+
+// Information boxes watch page
+.watch_info-box {
+  display: flex;
+  justify-content: center;
+  column-gap: 30px;
+  background: #ffffff;
+
+
+  .watch-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 1rem;
+    width: 250px;
+    padding: 10rem 0;
 
     .fa-box-open,
     .fa-record-vinyl,
