--- a/Apple_store/partials/_header.scss
+++ b/Apple_store/partials/_header.scss
@@ -1,9 +1,11 @@
 // Header
 .header {
+    position: absolute;
     top: 0;
     left: 0;
     right: 0;
-    z-index: 1000;
+    z-index: 5;
+    height: 48px;
     background: rgba(0, 0, 0, 0.8);
     display: flex;
     flex-direction: row;
@@ -11,15 +13,15 @@
     align-items: center;
     padding:1.5rem 9%;
 
+
     .navbar li {
         font-size: 1.7rem;
         font-weight: 400;
-        color: $gold-color;
         display: inline-block;
         margin: 0 1rem;
 
         a {
-            color: #f5f5f7;
+            color: #cdcdcd;
             padding: 0 2.5rem;
             text-decoration: none;
 
@@ -28,17 +30,6 @@
             }
         }
     }
-
-    .navbar {
-        display: flex;
-        padding-left: 20px;
-    }
-
-    .nav-items {
-        padding: 0 1.5rem;
-    
-    }
-
     .logo {
         padding: 0.2rem;
         font-size: 3rem;
