Small change for starting pic

--- a/Apple_store/partials/_headings.scss
+++ b/Apple_store/partials/_headings.scss
@@ -196,7 +196,7 @@
 
 // Home section Ipad - white image
 .about_ipad {
-  // margin-top: 5rem;
+  margin-top: 5rem;
   background: url(/apple_store/images/home_images/h3.png) no-repeat;
   background-size: cover;
   background-position: center;
