--- a/Apple_store/styles/style.css
+++ b/Apple_store/styles/style.css
@@ -464,6 +464,7 @@ footer .legal ul li:last-child {
 }
 
 .about_ipad {
+  margin-top: 5rem;
   background: url(/apple_store/images/home_images/h3.png) no-repeat;
   background-size: cover;
   background-position: center;
