--- a/Apple_store/styles/style.scss
+++ b/Apple_store/styles/style.scss
@@ -45,6 +45,10 @@ body {
     font-size: 55%;
   }
 
+  .nav_items_xmark{
+    display: none;
+  }
+
   .presentcard_mac,
   .gallery-center-image .box-container-center-image,
   .gallery-center-image .box-container-center-image2,
